Make the backend compile